# cmake_demo

./: .gitignore  README.md  build_all.sh  clean_all.sh
01_simple_compile/: Makefile  main.cpp
02_object_compile/: Makefile  secondary.cpp
03_simple_cmake/: CMakeLists.txt
03_simple_cmake/src/: main.cpp
04_lib_based_cmake/: CMakeLists.txt
05_cmake_with_deps/: CMakeLists.txt
05_cmake_with_deps/src/: main.cpp
06_cmake_with_tests/: CMakeLists.txt
06_cmake_with_tests/src/secondary/: secondary.hpp
06_cmake_with_tests/tests/: CMakeLists.txt  test_some_program.cpp
